[gd_scene load_steps=9 format=3 uid="uid://dwbr6gctt250g"]

[ext_resource type="Script" uid="uid://uombx7uephip" path="res://scripts/Menu.gd" id="1_4hy44"]
[ext_resource type="Texture2D" uid="uid://dcng2glgn4kfe" path="res://assets/button.png" id="1_lti8b"]
[ext_resource type="AudioStream" uid="uid://cpowpdidn2ck4" path="res://assets/sounds/cooking_maybe_rev_v1_official.ogg" id="2_l48gv"]
[ext_resource type="Texture2D" uid="uid://b4yikpbbuyd46" path="res://assets/button_hover.png" id="2_mae5d"]
[ext_resource type="FontFile" uid="uid://b6ts3d5puiayg" path="res://assets/fonts/PixeloidSans.ttf" id="2_ouk20"]
[ext_resource type="AudioStream" uid="uid://cytml7ofrh6vk" path="res://assets/sounds/cooking_maybe_rev_v3_official.ogg" id="3_l48gv"]
[ext_resource type="Texture2D" uid="uid://djnjmx2nmo13j" path="res://assets/combo.png" id="7_ecwwl"]

[sub_resource type="LabelSettings" id="LabelSettings_mae5d"]
font = ExtResource("2_ouk20")
font_size = 24
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_4hy44")

[node name="Panel" type="Panel" parent="."]
z_index = -1
offset_right = 1280.0
offset_bottom = 720.0

[node name="CookingMaybeRevV1Official" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("2_l48gv")

[node name="CookingMaybeRevV3Official" type="AudioStreamPlayer" parent="Panel"]
stream = ExtResource("3_l48gv")

[node name="PlayButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -21.0
offset_right = 112.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_lti8b")
texture_hover = ExtResource("2_mae5d")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.0
offset_right = 26.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = SubResource("LabelSettings_mae5d")
horizontal_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_lti8b")
texture_hover = ExtResource("2_mae5d")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/SettingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.0
offset_right = 26.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_mae5d")
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 32.0
offset_right = 112.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_lti8b")
texture_hover = ExtResource("2_mae5d")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.0
offset_right = 26.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_mae5d")
horizontal_alignment = 1

[node name="ExitButton2" type="TextureButton" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 85.0
offset_right = 112.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_lti8b")
texture_hover = ExtResource("2_mae5d")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/ExitButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -15.0
offset_right = 26.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_mae5d")
horizontal_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="Panel"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Panel/ParallaxBackground"]
z_index = 25
motion_scale = Vector2(5, 5)
motion_mirroring = Vector2(128, 128)

[node name="TextureRect" type="TextureRect" parent="Panel/ParallaxBackground/ParallaxLayer"]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 4
texture = ExtResource("7_ecwwl")
stretch_mode = 1

[connection signal="button_up" from="Panel/PlayButton" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Panel/SettingsButton" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Panel/ExitButton" to="." method="_on_exit_button_up"]
[connection signal="button_up" from="Panel/ExitButton2" to="." method="_on_exit_button_up"]
